@@ -58,3 +58,4 @@ add_subdirectory(src/communication)
 add_subdirectory(src/configfiles)
 add_subdirectory(src/database)
 add_subdirectory(src/scheduler)
+add_subdirectory(testsrc/commandLineInterface)
