@@ -39,7 +39,7 @@ namespace balancedbanana {
 		{
 		public:
 
-			virtual std::shared_ptr<Task> process(int argc, char** argv);
+			virtual std::shared_ptr<Task> process(int argc, char** argv) { return NULL; }
 
 		};
 
