@@ -1,0 +1,5 @@
+include(GoogleTest)
+
+add_executable(commandLineInterfaceTests ClientCommandLineProcessorTest.cpp)
+target_link_libraries(commandLineInterfaceTests ${GTEST} commandLineInterface configfiles)
+gtest_discover_tests(commandLineInterfaceTests)
