@@ -15,6 +15,8 @@ Snapshot => CreateSnapshot // Typname darf kein Methodenname sein
 
 18.01.2020 Docker, Container class Basic Implementation, Snapshot stub
 
+CommandLineInterface: Command structure changed; now uses subcommands to differentiate between different requests
+
 Windows
 
 gtest
